--- a/js13/index.html
+++ b/js13/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>My Classes</title>
+  <title>My json</title>
   <script src="js/main.js"></script>
 </head>
 <body>
   <main>
-    <h1>Classes </h1>
+    <h1>json</h1>
   </main>
   
 </body>
