--- a/Assignments/Week1/Assigments.html
+++ b/Assignments/Week1/Assigments.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Week1 assignments</title>
+  <!--JavaScript Files-->
+  <script src="js/day1.js"></script>
+  <script src="js/day2.js"></script>
+  <script src="js/day3.js"></script>
+  <script src="js/day4.js"></script>
+  <script src="js/day5.js"></script>
+  <script src="js/day6.js"></script>
+  <script src="js/day7.js"></script>
 </head>
 <body>
   <main>
