Worked on the calculator part

--- a/Assignments/Week1/Assigments.html
+++ b/Assignments/Week1/Assigments.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Week1 assignments</title>
   <!--JavaScript Files-->
-  <script src="js/day1calc"></script>
+  <script src="js/day1.js"></script>
   <script src="js/day2.js"></script>
   <script src="js/day3.js"></script>
   <script src="js/day4.js"></script>
