--- a/js15/index.html
+++ b/js15/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Errors</title>
+  <title>Document Object Model</title>
   <script src="js/main.js"></script>
 </head>
 <body>
   <main>
-    <h1>Errors</h1>
+    <h1>Document Object Model</h1>
   </main>
   
 </body>
