Sorted the data in the main HTML file

--- a/Assignments/Week1/Assigments.html
+++ b/Assignments/Week1/Assigments.html
@@ -20,17 +20,16 @@
     </h1>
   </main>
   <h2>
-    <li>
-      DAY 1: VARIABLES, DATA TYPES, OPERATORS => Simple Calculator
-      DAY 2: FUNCTIONS & CONDITIONAL STATEMENTS => Buld a grade Calculator(Take scores from 0-100 and return the grades)
-      DAY 3: ARRAYS & LOOPS => Build a To-Do List Manager(consiole based. Store tasks in an array, add, display & remove tasks using functions. Loop through the array to show tasks)
-      DAY 4: OBJECTS & CLASSES => Create a Student class (properties: name, grade, age. Method(getDetails=> Returns full info), create multiple student objetcs and store them in an array)
-      DAY 5: DOM MANIPULATION =>Button that says "click me", When clicked it increases the counter on the page. Save in p tag
-      DAY 6: SIMPE CONTACT FORM => Form with name, email, messages inputs. When submitted shows a "Thank you" message using an alert or by updating the Page. Validatye that all the fields are filled. Style a bit with css.
-      DAY 7: MINI PROJECT(QUIZ APP). => Has 3-5 questions, Array of questions and answers, ask each question using a prompt(), Store the users correct answers & finaly display the final scores
-
-
-    </li>
+    
+    <ul>
+      <li>DAY 1: VARIABLES, DATA TYPES, OPERATORS => Simple Calculator</li>
+      <li>DAY 2: FUNCTIONS & CONDITIONAL STATEMENTS => Buld a grade Calculator(Take scores from 0-100 and return the grades)</li>
+      <li>DAY 3: ARRAYS & LOOPS => Build a To-Do List Manager(consiole based. Store tasks in an array, add, display & remove tasks using functions. Loop through the array to show tasks)</li>
+      <li>DAY 4: OBJECTS & CLASSES => Create a Student class (properties: name, grade, age. Method(getDetails=> Returns full info), create multiple student objetcs and store them in an array)</li>
+      <li>DAY 5: DOM MANIPULATION =>Button that says "click me", When clicked it increases the counter on the page. Save in p tag</li>
+      <li>DAY 6: SIMPE CONTACT FORM => Form with name, email, messages inputs. When submitted shows a "Thank you" message using an alert or by updating the Page. Validatye that all the fields are filled. Style a bit with css.</li>
+      <li>DAY 7: MINI PROJECT(QUIZ APP). => Has 3-5 questions, Array of questions and answers, ask each question using a prompt(), Store the users correct answers & finaly display the final scores</li>
+    </ul>
     </h2>
 
 
